# book-skill

./: .gitignore  README.md  README_CN.md  pyproject.toml  test_book.txt  变现规划.md
.github/workflows/: book2skill.yml
book2skill/: __init__.py  chunker.py  cli.py  generator.py  parser.py  toc.py  utils.py
tests/: conftest.py  test_chunker.py  test_generator.py  test_parser.py  test_toc.py  test_utils.py
